# streamlit-realtime-audio-recorder

./: LICENSE  README.md  pyproject.toml
src/streamlit_realtime_audio_recorder/: __init__.py  audio_recorder.py
